--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "test": "k6 run dist/test.js"
+    "testp": "k6 run dist/protocol-test.js",
+    "testb": "k6 run dist/browser-test.js"
   },
   "keywords": [],
   "author": "",
