--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc",
     "testp": "tsc && k6 run dist/protocol-test.js",
-    "testb": "tsc && k6 run dist/browser-test.js"
+    "testb": "tsc && K6_BROWSER_HEADLESS=false K6_BROWSER_ARGS='show-property-changed-rects' k6 run dist/browser-test.js"
   },
   "keywords": [],
   "author": "",
